# boss-project

./: .gitignore  .gitmodules  prepare.sh
sources/: CMakeLists.txt  Makefile
sources/toolchains/: armv7-a.cmake  x86_64-linux.cmake
